--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,24 @@
-# Oracle Cloud Database Connection Properties
-spring.datasource.url=jdbc:oracle:thin:@(description=(retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=abcdefg_high.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+# Change from validate to create or update
+spring.jpa.hibernate.ddl-auto=create
+
+# Oracle Cloud Database Connection using Wallet
+spring.datasource.url=jdbc:oracle:thin:@t05a8cwydn15ex66_high?TNS_ADMIN=src/main/resources/Wallet
 spring.datasource.username=admin
-spring.datasource.password=your_strong_password_here
+spring.datasource.password=M1garand.(M1
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-# HikariCP Connection Pool Settings
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=300000
+# Connection Pool Settings
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
 
-# JPA/Hibernate Properties
-spring.jpa.hibernate.ddl-auto=validate
+# JPA Properties
+#spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
-# Oracle Connection Pool
-spring.datasource.type=oracle.ucp.jdbc.PoolDataSource
-spring.datasource.oracleucp.connection-factory-class-name=oracle.jdbc.pool.OracleDataSource
-spring.datasource.oracleucp.sql-for-validate-connection=SELECT 1 FROM DUAL
-spring.datasource.oracleucp.connection-pool-name=UcpPoolOracle
-spring.datasource.oracleucp.initial-pool-size=5
-spring.datasource.oracleucp.min-pool-size=5
-spring.datasource.oracleucp.max-pool-size=10
-
-# SSL Configuration for Oracle Cloud
-spring.datasource.oracleucp.connection-properties.oracle.net.ssl_version=1.2
-spring.datasource.oracleucp.connection-properties.oracle.net.ssl_server_dn_match=true
-spring.datasource.oracleucp.connection-properties.oracle.net.wallet_location=(SOURCE=(METHOD=FILE)(METHOD_DATA=(DIRECTORY=${WALLET_DIRECTORY})))
-
-# Oracle Specific JPA Properties
-spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
+# Debug Connection Issues
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.hibernate.engine.jdbc.env.internal.JdbcEnvironmentImpl=DEBUG
